<resources>
    <string name="app_name">Doco</string>
    <string name="deseo_registrarme">¿Deseo registrarme?</string>
    <string name="registrate">Registrate</string>
    <string name="email">email</string>
    <string name="contrasena">contraseña</string>
    <string name="olvidaste_contrasena">¿Olvidaste tu contraseña?</string>
    <string name="recordar">Recordar</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="politicas">Las políticas públicas son las respuestas que el Estado  puede dar a las demandas de la sociedad, en forma de normas, instituciones, prestaciones,  bienes públicos o servicios.</string>
    <string name="accept_terms">Acepto los terminos y condiciones.</string>
    <string name="registrar">Registrar</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="payment">Pago</string>
    <string name="docos">Docos</string>
    <string name="free_docos">Docos gratis</string>
    <string name="promotions">Promociones</string>
    <string name="help">Ayuda</string>
    <string name="driver_doco">Conduce doco</string>
    <string name="setting">Configuración</string>

    <string name="action_voice_rec">action voice rec</string>
    <string name="action_location">action location</string>
    <string name="action_taxi">action taxi</string>
    <string name="action_change_colors">change style</string>
    <string name="introduzca_destino">Introduzca un destino</string>
    <string name="conductores">Conductores</string>
    <string name="pedidos">Pedidos</string>

    <string name="code">Código:</string>
    <string name="movil">Celular:</string>
    <string name="name_vehicle">Vehiculo:</string>
    <string name="license_plate">Placa:</string>
    <string name="soat_vehicle">Soat:</string>
    <string name="mechanical_technician">Tecno mecanica:</string>

    <string name="code_doco">Código doco:</string>
    <string name="doco_rate">Tarifa:</string>
    <string name="wait_time">Tiempo de espera:</string>
    <string name="come_for_me">Ven por mí</string>
    <string name="distance">Distancia:</string>
    <string name="name_user">nombre</string>
    <string name="last_name_user">apellido</string>
    <string name="movil_user">MÓVIL</string>
    <string name="my_data">Mís datos</string>
    <string name="my_locations">Mís ubicaciones</string>
    <string name="name">nombre</string>
    <string name="phone">teléfono</string>
    <string name="home">casa</string>
    <string name="office">oficina</string>
    <string name="delete_account">Eliminar cuenta</string>
    <string name="sign_off">Cerrar sesión</string>
    <string name="vehicle">Vehiculo</string>
    <string name="vehicle_model">model</string>
    <string name="docos_promotions_question">¿DOCOS gratis?</string>
    <string name="invite_your_friends">Invita a tus amigos</string>
    <string name="docos_is_driver_question">Ingresa el código que te  acredita como conductor DOCO.</string>
    <string name="insert_code_doco_free">Ingresa código de invitación</string>
    <string name="insert_driver_code">Ingresa código</string>
    <string name="enter">Ingresar</string>
    
    <string name="msn_share_code">COMPARTE EL CÓDIGO DE INVITACIÓN</string>
    <string name="msn_policy_share_code">Regala a tus amigos DOCOS gratis. Obtendrás 1.000 COP de cupo para tus siguientes DOCOS cuando ellos comiencen a DOQUEAR.</string>
    <string name="share">Compartir</string>
    <string name="err_msg_login">El campo email no es valido</string>
    <string name="err_msg_password">El campo contraseña no puede ser vacío</string>
    <string name="err_msg_login_no_empty">El campo email no puede ser vacío</string>
    <string name="msg_sign_off">Desea cerrar sesión?</string>
    <string name="msg_delete_account">Desea eliminar cuenta?</string>
    <string name="action_image">Cambiar imagen</string>

</resources>
