<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_payment"
            android:icon="@drawable/ic_payment"
            android:title="@string/payment" />
        <item
            android:id="@+id/nav_docos"
            android:icon="@drawable/ic_travels"
            android:title="@string/docos" />
        <item
            android:id="@+id/nav_free_docos"
            android:icon="@drawable/ic_share"
            android:title="@string/free_docos" />
        <item
            android:id="@+id/nav_promotions"
            android:icon="@drawable/ic_card_giftcard"
            android:title="@string/promotions" />

        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help_outline"
            android:title="@string/help" />
        <item
            android:id="@+id/nav_driver_doco"
            android:icon="@drawable/ic_helmet_menu"
            android:title="@string/driver_doco" />
        <item
            android:id="@+id/nav_configuration"
            android:icon="@drawable/ic_settings"
            android:title="@string/setting"/>
    </group>
</menu>
