<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/opt_delete_account"
        android:icon="@drawable/ic_delete"
        android:orderInCategory="100"
        android:title="@string/delete_account"
        app:showAsAction="never" />
    <item
        android:id="@+id/opt_sign_off"
        android:icon="@drawable/ic_power_settings"
        android:orderInCategory="100"
        android:title="@string/sign_off"
        app:showAsAction="never" />
    <item
        android:id="@+id/ic_person_add"
        android:icon="@drawable/ic_camera"
        android:orderInCategory="1"
        android:title="@string/action_image"
        app:showAsAction="ifRoom" />
</menu>