<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_principal"
    android:fitsSystemWindows="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.domicilio.confiable.doco.views.activities.LoginActivity">

    <requestFocus />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_logo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:background="@drawable/alpha_black"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textColorHint="@color/colorWhiteAlphaHint"
            app:hintTextAppearance="@style/FloatingLabelWhite">

            <EditText
                android:id="@+id/edt_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorWhite"
                android:theme="@style/EditTextBlack" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textColorHint="@color/colorWhiteAlphaHint"
            app:hintTextAppearance="@style/FloatingLabelWhite"
            app:passwordToggleTint="@color/colorBlackAlpha">

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contrasena"
                android:inputType="textPassword"
                android:textColor="@color/colorWhite"
                android:theme="@style/EditTextBlack" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/olvidaste_contrasena"
            android:textColor="@color/colorWhite" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorWhite"
            android:text="@string/recordar"
            android:textColor="@color/colorWhite" />

        <com.balysv.materialripple.MaterialRippleLayout style="@style/RippleView">

            <Button
                android:id="@+id/btn_start_session"
                style="@style/Button.Dark"
                android:text="@string/iniciar_sesion" />
        </com.balysv.materialripple.MaterialRippleLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_weight="0"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/deseo_registrarme"
            android:textColor="@color/colorWhite" />

        <com.balysv.materialripple.MaterialRippleLayout style="@style/RippleView">

            <Button
                android:id="@+id/btn_register"
                style="@style/Button.Dark"
                android:layout_weight="0.9"
                android:text="@string/registrate" />
        </com.balysv.materialripple.MaterialRippleLayout>
    </LinearLayout>

</LinearLayout>
