<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:autofit="http://schemas.android.com/tools"
    android:background="@color/colorGray"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height_dialog"
        android:layout_weight="1"
        android:layout_marginTop="10dp"
        android:background="@color/colorBlackAlpha">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/fondo_emergente"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="20dp"
            android:clickable="true"
            android:foreground="@drawable/selectable_item_background">

            <me.grantland.widget.AutofitTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/docos_promotions_question"
                android:textSize="35sp"
                autofit:minTextSize="30sp"
                />

            <me.grantland.widget.AutofitTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/invite_your_friends"
                android:textSize="25sp"
                autofit:minTextSize="22sp"
                />
        </LinearLayout>
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorBlackAlphaHint"
        app:hintTextAppearance="@style/FloatingLabelBlack"
        android:layout_weight="0">

        <EditText
            android:id="@+id/edt_code_doco_free"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/insert_code_doco_free"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorBlack"
            android:theme="@style/EditTextBlack" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_weight="0"
        android:gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Button.Orange">
            <Button
                android:id="@+id/btn_register_code_doco_free"
                style="@style/SelectableItemBackgroundButton"
                android:text="@string/registrar" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>