<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.domicilio.confiable.doco.views.fragments.DriverProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorWhite"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/driver_profile_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/name_driver"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Edwin Fernando Muñoz"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_action_doco" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_action_doco" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_action_doco" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_action_doco" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_action_doco" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout style="@style/LinearLayoutBackgroundAlpha">

            <TextView
                android:drawableLeft="@drawable/ic_helmet"
                android:drawableTint="@color/colorBlackAlphaHint"
                android:text="@string/code"
                style="@style/TextViewLabel"/>

            <TextView
                android:id="@+id/txt_driver_code"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout style="@style/LinearLayoutBackgroundNull">

            <TextView
                android:drawableLeft="@drawable/ic_movil"
                android:drawableTint="@color/colorBlackAlphaHint"
                android:text="@string/movil"
                style="@style/TextViewLabel"/>

            <TextView
                android:id="@+id/txt_movil_number"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:background="@drawable/circle_call"
                android:shadowColor="#000000"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="1"
                android:elevation="5dp">

                <ImageButton
                    android:id="@+id/fab_driver_call"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:src="@drawable/ic_call"
                    android:tint="@color/colorWhite"
                    style="@style/SelectableItemBackground"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout style="@style/LinearLayoutBackgroundAlpha">

            <TextView
                android:drawableLeft="@drawable/ic_motorbike"
                android:drawableTint="@color/colorBlackAlphaHint"
                android:text="@string/name_vehicle"
                style="@style/TextViewLabel"/>

            <TextView
                android:id="@+id/txt_name_vehicle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout style="@style/LinearLayoutBackgroundNull">

            <TextView
                android:drawableLeft="@drawable/ic_license_plate"
                android:drawableTint="@color/colorBlackAlphaHint"
                android:text="@string/license_plate"
                style="@style/TextViewLabel"/>

            <TextView
                android:id="@+id/txt_license_plate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout style="@style/LinearLayoutBackgroundAlpha">

            <TextView
                android:drawableLeft="@drawable/ic_soat_vehicle"
                android:drawableTint="@color/colorBlackAlphaHint"
                android:text="@string/soat_vehicle"
                style="@style/TextViewLabel"/>

            <TextView
                android:id="@+id/txt_soat_vehicle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout style="@style/LinearLayoutBackgroundNull">

            <TextView
                android:drawableLeft="@drawable/ic_mechanical_technician"
                android:drawableTint="@color/colorBlackAlphaHint"
                android:text="@string/mechanical_technician"
                style="@style/TextViewLabel"/>

            <TextView
                android:id="@+id/mechanical_technician"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>
