<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.domicilio.confiable.doco.views.fragments.DriverComeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorWhite"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/driver_come_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:adjustViewBounds="true"
                android:scaleType="fitXY" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="bottom"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/name_driver"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="Edwin Fernando Muñoz"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="10dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_score_doco" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_score_doco" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_score_doco" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_score_doco" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_score_doco" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout style="@style/LinearLayoutBackgroundAlpha">

            <TextView
                style="@style/TextViewLabel"
                android:drawableLeft="@drawable/ic_helmet"
                android:drawableTint="@color/colorBlackAlphaHint"
                android:text="@string/code" />

            <TextView
                android:id="@+id/txt_driver_code"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout style="@style/LinearLayoutBackgroundNull">

            <TextView
                style="@style/TextViewLabel"
                android:drawableLeft="@drawable/ic_doco"
                android:drawableTint="@color/colorBlackAlphaHint"
                android:text="@string/code_doco" />

            <TextView
                android:id="@+id/txt_code_doco"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout style="@style/LinearLayoutBackgroundAlpha">

            <TextView
                style="@style/TextViewLabel"
                android:drawableLeft="@drawable/ic_payment_come"
                android:drawableTint="@color/colorBlackAlphaHint"
                android:text="@string/doco_rate" />

            <TextView
                android:id="@+id/txt_payment_come"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout style="@style/LinearLayoutBackgroundNull">

            <TextView
                style="@style/TextViewLabel"
                android:drawableLeft="@drawable/ic_pin_drop_come"
                android:drawableTint="@color/colorBlackAlphaHint"
                android:text="@string/distance" />

            <TextView
                android:id="@+id/txt_distance"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            style="@style/LinearLayoutBackgroundAlpha"
            android:orientation="vertical">

            <TextView
                style="@style/TextViewLabel"
                android:drawableLeft="@drawable/ic_wait_time"
                android:drawableTint="@color/colorBlackAlphaHint"
                android:text="@string/wait_time" />

            <TextView
                android:id="@+id/txt_wait_time"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="00:00"
                android:textSize="80dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="0"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Button.Orange">
                    <Button
                        android:id="@+id/btn_come_for_me"
                        style="@style/SelectableItemBackgroundButton"
                        android:text="@string/come_for_me" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>




    </LinearLayout>


</FrameLayout>
